--- a/.github/workflows/gallery.yml
+++ b/.github/workflows/gallery.yml
@@ -22,6 +22,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            BRANCH: gh-pages
+            BRANCH: master
             FOLDER: build_output
             CLEAN: true
